--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: edwig-admin
 Section: misc
 Priority: extra
 Maintainer: af83 devs <devs+debian@af83.com>
-Build-Depends: debhelper, cdbs, ruby2.3, ruby2.3-dev, libxml2-dev, libxslt1-dev, libpq-dev, libev-dev, git-core
+Build-Depends: debhelper, ruby2.3, ruby2.3-dev, libxml2-dev, libxslt1-dev, libpq-dev, libev-dev, git-core
 Standards-Version: 3.8.1
 Homepage: https://github.com/af83/edwig-admin/
 
