--- a/debian/rules
+++ b/debian/rules
@@ -1,10 +1,16 @@
 #!/usr/bin/make -f
+# -*- makefile -*-
+# Sample debian/rules that uses debhelper.
+# This file was originally written by Joey Hess and Craig Small.
+# As a special exception, when this file is copied by dh-make into a
+# dh-make output file, you may use that output file without restriction.
+# This special exception was added by Craig Small in version 0.37 of dh-make.
 
-include /usr/share/cdbs/1/rules/debhelper.mk
-include /usr/share/cdbs/1/class/makefile.mk
+# Uncomment this to turn on verbose mode.
+#export DH_VERBOSE=1
 
-DEB_MAKE_BUILD_TARGET = build
-DEB_MAKE_INSTALL_TARGET = install DESTDIR=$(DEB_DESTDIR)
+override_dh_auto_configure:
+	cp debian/Makefile .
 
-configure/edwig-admin::
-	cp debian/Makefile $(DEB_BUILDDIR)
+%:
+	dh $@
